Fix text wrap for long chat messages
Fix text wrap in chat UI component, for very long messages.

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -20,4 +20,9 @@
   color: inherit;
 }
 
+.text-pre-wrap-break {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
 @import './quasar.overrides.scss';
